--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/webcam-dialog/webcam-dialog.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/webcam-dialog/webcam-dialog.component.scss
@@ -1,26 +1,32 @@
-.view-container {
-    position: relative;
-
-    .cancel {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        z-index: 1;
-        cursor: pointer;
-    }
-}
-
-
-.camera-container {
-    >div {
-        margin: auto;
-        width: 50px;
-        height: 50px;
+:host{
+    .view-container {
+        position: relative;
     
-        img {
-            width: 100%;
-            height: auto;
+        .cancel {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            z-index: 1;
             cursor: pointer;
+        }
+    }
+    
+    .vh50 {
+        height: 100px !important;
+        padding: 15px !important;
+    }
+
+    .camera-container {
+        >div {
+            margin: auto;
+            width: 50px;
+            height: 50px;
+        
+            img {
+                width: 100%;
+                height: auto;
+                cursor: pointer;
+            }
         }
     }
 }
