--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -1,7 +1,12 @@
 <div class="kt-padding-l-10">
     <mat-tab-group [formGroup]="ornamentsForm" class="position-relative" [(selectedIndex)]="selected">
-        <mat-tab label="Ornaments {{idx+1}}" formArrayName="ornamentData"
+        <mat-tab  formArrayName="ornamentData"
             *ngFor="let ornament of OrnamentsData.controls;index as idx">
+            <ng-template mat-tab-label>
+                Ornaments {{idx+1}}
+                <img *ngIf="idx > 0" class="removeImageSize kt-padding-l-5 kt-pointer" [src]="'assets/media/icons/cancel.png'"
+                (click)="removeOrnaments(idx)" />
+            </ng-template>
             <div class="row justify-content-around" [formGroupName]="idx">
                 <div class="col-9 kt-padding-l-45">
                     <div class="row justify-content-around">
