bhushan:: chnages in lead source

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -123,11 +123,11 @@
 
 					<div class="row kt-padding-t-15">
 						<div class="col-4 align-self-center form-label">
-							<label class="mandatory  text-color font-weight-500">PAN Type</label>
+							<label class="mandatory  text-color font-weight-500">PAN / FORM 60 </label>
 						</div>
 						<div class="col-8">
 							<select class="form-control" formControlName="panType">
-								<option value="" selected disabled>Select PAN Type</option>
+								<option value="" selected disabled>Select</option>
 								<option value="pan">PAN</option>
 								<option value="60">FORM 60</option>
 							</select>
