--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
@@ -4,23 +4,23 @@
     }
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 100% !important;
+        width: 130% !important;
     }
     .mat-column-fullName{
-        flex: 0 0 13% !important;
+        flex: 0 0 11% !important;
         padding-left: 5px !important;
     }
     .mat-column-view{
-        flex: 0 0 4% !important;
+        flex: 0 0 6% !important;
     }
     .mat-column-pan{
-        flex: 0 0 9% !important;
+        flex: 0 0 7% !important;
     }
     .mat-column-internalBranch{
-        flex: 0 0 12% !important;
+        flex: 0 0 10% !important;
     }
     .mat-column-state{
-        flex: 0 0 10% !important;
+        flex: 0 0 9% !important;
     }
     .mat-column-city{
         flex: 0 0 9% !important;
@@ -29,17 +29,19 @@
         flex: 0 0 7% !important;
     }
     .mat-column-date{
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-status{
-        flex: 0 0 10% !important;
-
+        flex: 0 0 8% !important;
+    }
+    .mat-column-kycStatus{
+        flex: 0 0 8% !important;
     }
     .border-apply{
         border: 1px solid !important;
     }
     .mat-column-kyc{
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-actions{
         flex: 0 0 6% !important;
