--- a/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-add/lead-source-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-add/lead-source-add.component.html
@@ -17,7 +17,7 @@
                         </div>
                     </div>
 
-                    <div class="row justify-content-center kt-margin-t-10">
+                    <!-- <div class="row justify-content-center kt-margin-t-10">
                         <div class="col-4 form-label">
                             <label class="kt-padding-l-10 mandatory">Source</label>
                         </div>
@@ -28,7 +28,7 @@
                                 Required field
                             </mat-error>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </form>
