--- a/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-list/lead-source-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/lead-source/lead-source-list/lead-source-list.component.html
@@ -8,10 +8,10 @@
                     <mat-cell *matCellDef="let item">{{item.leadName | titlecase}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="source">
+                <!-- <ng-container matColumnDef="source">
                     <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.sourceName | titlecase}}</mat-cell>
-                </ng-container>
+                </ng-container> -->
 
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
