--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -84,8 +84,9 @@
               </div>
               <div class="col">
                 <label>By Status</label>
-                <kt-multi-select-search formControlName="status" [items]="statusList" [multiple]="true"
-                  [bindLabel]="'name'" [isClear]="clearData"></kt-multi-select-search>
+                <kt-multi-select-search formControlName="leadStatus" [items]="statusList" [multiple]="true"
+                  [bindLabel]="'statusName'" [placeholder]="'Select Status'" [isClear]="clearData">
+                </kt-multi-select-search>
               </div>
               <div class="col-2 d-flex align-items-end">
                 <label></label>
