--- a/gold-admin-frontend/src/app/views/pages/admin/assigned-customers/assigned-customers.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/assigned-customers/assigned-customers.component.html
@@ -17,7 +17,7 @@
                 <ng-container matColumnDef="newLoan">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <button style="width: 120px;" class="apply-kyc" (click)="applyLoan(item)">Add New Loan</button>
+                        <button style="width: 120px;" class="apply-kyc" (click)="applyLoan(item)">Apply Loan</button>
                     </mat-cell>
                 </ng-container>
 
