--- a/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.scss
+++ b/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.scss
@@ -14,6 +14,12 @@
 		white-space: nowrap;
 	}
 
+	.kt-menu__link-count {
+		display: flex;
+		align-items: center;
+		flex-grow: 0;
+	}
+
 	.bgColor{
 		background-color: white !important;
 	}
